@@ -2,6 +2,8 @@
 
 	* src/Rstrptime.h (dt_invalidate_locale): Add void for prototype
 
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
+
 2021-08-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.6
